apollo-router/src/plugins/connectors/snapshots/apollo_router__plugins__connectors__directives__tests__enum_directive_has_no_errors.snap
---
source: apollo-router/src/plugins/connectors/directives.rs
expression: all_source_apis
---
{
  "CONTACTS": {
    "name": "rest_contacts",
    "http": {
      "base_url": "http://localhost:4002/contacts/",
      "default": true,
      "headers": [
        {
          "name": "x-test",
          "as": null,
          "value": "test1234"
        },
        {
          "name": "x-before-rename-test",
          "as": "x-after-rename-test",
          "value": null
        },
        {
          "name": "x-before-rename-and-with-value-test",
          "as": "x-after-rename-and-with-value-test",
          "value": "test5678"
        }
      ]
    }
  },
  "LEGACY_CONTACTS": {
    "name": "legacy_contacts",
    "http": {
      "base_url": "http://localhost:4002/legacy/contacts/",
      "default": null,
      "headers": []
    }
  },
  "NOTES": {
    "name": "rest_notes",
    "http": {
      "base_url": "http://localhost:4002/notes/",
      "default": null,
      "headers": []
    }
  }
}
