apollo-router/src/plugins/connectors/snapshots/apollo_router__plugins__connectors__directives__tests__valid_source_types-2.snap
---
source: apollo-router/src/plugins/connectors/directives.rs
expression: valid_source_type_default_http
---
{
  "graph": "contacts",
  "type_name": "ValidSourceTypeDefaultHttp",
  "api": "contacts",
  "http": null,
  "selection": null,
  "key_type_map": null
}
