apollo-router/src/plugins/connectors/snapshots/apollo_router__plugins__connectors__directives__tests__valid_source_types.snap
---
source: apollo-router/src/plugins/connectors/directives.rs
expression: valid_source_type
---
{
  "type_name": "ValidSourceType",
  "api": "contacts",
  "http": {
    "get": null,
    "post": null,
    "headers": [],
    "body": null
  },
  "selection": null,
  "key_type_map": null
}
